# mcp-command-server

./: .gitignore  export_project.sh  project_tree.txt  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: test.yml
docs/: README.md
project_trees/: project_tree_20250128_214337.txt  project_tree_20250128_221337.txt  project_tree_20250128_231431.txt  project_tree_20250129_013321.txt  project_tree_20250129_020321.txt  project_tree_20250129_030329.txt  project_tree_20250129_033329.txt  project_tree_20250129_043343.txt  project_tree_20250129_050343.txt  project_tree_20250129_065706.txt  project_tree_20250129_084933.txt
src/mcp_command_server/: __init__.py  server.py
src/mcp_command_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp_command_server/command/: parser.py
src/mcp_command_server/history/: command_logger.py
src/mcp_command_server/integration/: claude_desktop.py
src/mcp_command_server/security/: __init__.py  audit.py  confirmation.py  sanitizer.py  validator.py
src/mcp_command_server/terminal/: __init__.py  terminal_interface.py
src/mcp_command_server/ui/: prompts.py
tests/: conftest.py  pytest.ini
tests/integration/: test_mcp_server_integration.py
tests/integration/command/: test_command_flow.py
tests/integration/history/: test_command_logging.py
tests/integration/integration/: test_claude_integration.py
tests/integration/security/: test_security_flow.py
tests/integration/terminal/: test_terminal_integration.py
tests/integration/ui/: test_user_prompts.py
tests/unit/: test_mcp_server.py
tests/unit/command/: test_parser.py
tests/unit/security/: test_audit.py  test_sanitizer.py  test_validator.py
tests/unit/terminal/: test_terminal_interface.py
